# expence_tracker

./: README.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt  setup.py
apps/expense_tracker/: expense_events.py
apps/expense_tracker/api/: expense_api.py
apps/expense_tracker/modules/expenses/doctype/expense/: expense.js  expense.json
apps/expense_tracker/modules/expenses/doctype/expense_category/: __init__.py
expense_tracker/: __init__.py  hooks.py  notifications.py  tasks.py
expense_tracker/api/: __init__.py
expense_tracker/modules/expenses/: __init__.py
expense_tracker/modules/expenses/doctype/expense/: __init__.py  expense.py
expense_tracker/modules/expenses/doctype/expense/templates/: expense.html  generators.py
expense_tracker/modules/expenses/doctype/expense_category/: expense_category.json  expense_category.py
expense_tracker/public/css/: expense_tracker.css
expense_tracker/public/js/: expense_tracker.js
