[project]
name = "expense_tracker"
version = "0.0.1"
description = "Simple Daily Expense Tracking Application"
authors = [
    {name = "Your Company", email = "support@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10,<3.12"
dependencies = [
    "frappe>=15.0.0,<16.0.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
